# SimpleVO

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Camera.h  Frame.h  MapPoint.h  OpticalFlow.cpp  OpticalFlow.h  VO.cpp  VO.h  direct.cpp  direct.h  local_parameterization_se3.hpp  optimization.cpp  optimization.h  run_kitti.cpp  utils.cpp  utils.hpp
src/evaluate/: CMakeLists.txt  evaluate_odometry.cpp  matrix.h
src/test/: CMakeLists.txt  test_ceres_se3.cpp
